--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -1,7 +1,7 @@
 <div>
   <ul class="students">
     <li *ngFor="let student of allStudents" (click)="onSelectedStudent(student)" [class.selected]="student === selectedStudent">
-      <span>{{ student.id }}</span>  {{ student.name }}
+      <span>{{ student.id }}</span> {{ student.name }}
     </li>
   </ul>
 </div>
@@ -13,8 +13,8 @@
   <div>
     <div>{{ selectedStudent.id }}</div>
     <div>
-      <input type="text" name="" value="" [(ngModel)]="selectedStudent.name">
-      {{ selectedStudent.name }}
+      <input type="text" name="" value="" [(ngModel)]="selectedStudent.name"> {{ selectedStudent.name }}
     </div>
+    <div>{{ selectedStudent.gender }}, {{ selectedStudent.description }}</div>
   </div>
 </div>
