separated student details in new component

--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -5,16 +5,4 @@
     </li>
   </ul>
 </div>
-
-
-
-<div *ngIf="selectedStudent">
-  <h2>{{ selectedStudent.name }} details:</h2>
-  <div>
-    <div>{{ selectedStudent.id }}</div>
-    <div>
-      <input type="text" name="" value="" [(ngModel)]="selectedStudent.name"> {{ selectedStudent.name }}
-    </div>
-    <div>{{ selectedStudent.gender }}, {{ selectedStudent.description }}</div>
-  </div>
-</div>
+<app-student-detail [prosledjeni]="selectedStudent"></app-student-detail>
